# file-system-analyzer

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yaml
src/cli/: cli.py
src/file_system_analyzer/: __init__.py  logging_config.py
src/file_system_analyzer/cli/: cli.py  utils.py
src/file_system_analyzer/models/: file_system_analyzer.py  file_type_mappings.py  utils.py
tests/test_cli/: test_main.py  test_utils.py
tests/test_models/: test_file_system_analyzer.py  test_utils.py
