[project]
name = "file-system-analyzer"
version = "0.1.0"
description = "Categorizes files by type, reports on size and permissions"
readme = "README.md"
authors = [
    { name = "Georgy Lepsaya", email = "georgelepsaya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "python-magic>=0.4.27",
]

[project.scripts]
fsa = "cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
