[project]
name = "file-system-analyzer"
version = "0.1.0"
description = "Categorizes files by type, reports on size and permissions"
readme = "README.md"
authors = [
    { name = "Georgy Lepsaya", email = "georgelepsaya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-magic>=0.4.27",
    "rich>=14.0.0",
]

[project.scripts]
fsa = "file_system_analyzer.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
